@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 import java.net.InetAddress;
 import java.util.*;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.stream.Collectors;
 
 @Service
 public class LoadBalancingOptimizer {
@@ -27,8 +28,6 @@ public class LoadBalancingOptimizer {
     public LoadBalancingOptimizer(StringRedisTemplate redisTemplate) {
         this.redisTemplate = redisTemplate;
         this.podId = generatePodId();
-        
-        // Pod 등록
         registerPod();
     }
 
@@ -43,29 +42,21 @@ public class LoadBalancingOptimizer {
         }
     }
 
-    /**
-     * Redis에 현재 Pod 등록
-     */
     private void registerPod() {
         try {
             String key = "load_balancer:active_pods";
             redisTemplate.opsForZSet().add(key, podId, System.currentTimeMillis());
             redisTemplate.expire(key, java.time.Duration.ofMinutes(5));
-            
             logger.info("Load Balancer에 Pod 등록: {}", podId);
         } catch (Exception e) {
             logger.error("Pod 등록 실패", e);
         }
     }
 
-    /**
-     * 특정 영화에 대한 처리 담당 Pod 결정
-     */
     public boolean shouldProcessMovie(String movieId) {
         if (!enableLoadBalancing) {
-            return true; // 부하 분산 비활성화 시 모든 Pod가 처리
+            return true;
         }
-
         try {
             return switch (loadBalancingStrategy.toUpperCase()) {
                 case "ROUND_ROBIN" -> shouldProcessRoundRobin(movieId);
@@ -79,93 +70,75 @@ public class LoadBalancingOptimizer {
         }
     }
 
-    /**
-     * Round Robin 방식: 영화 ID를 순환하며 Pod에 할당
-     */
     private boolean shouldProcessRoundRobin(String movieId) {
         List<String> activePods = getActivePods();
-        if (activePods.isEmpty()) return true;
+        if (activePods.isEmpty() || !activePods.contains(podId)) {
+             logger.warn("활성 Pod 목록에 현재 Pod({})이 없거나 목록이 비었습니다. 목록: {}", podId, activePods);
+             return false;
+        }
         
         int movieHash = Math.abs(movieId.hashCode());
         int assignedPodIndex = movieHash % activePods.size();
         String assignedPod = activePods.get(assignedPodIndex);
         
         boolean shouldProcess = podId.equals(assignedPod);
-        
         if (shouldProcess) {
             logger.debug("Round Robin - 영화 {} 처리 담당: {}", movieId, podId);
         }
-        
         return shouldProcess;
     }
 
-    /**
-     * Hash 기반 방식: 영화 ID 해시를 통한 일관된 할당
-     */
     private boolean shouldProcessHashBased(String movieId) {
         List<String> activePods = getActivePods();
-        if (activePods.isEmpty()) return true;
+        if (activePods.isEmpty() || !activePods.contains(podId)) {
+             return false;
+        }
         
-        // Consistent Hashing 구현
         int targetHash = Math.abs(movieId.hashCode());
         String assignedPod = activePods.stream()
-            .min(Comparator.comparingInt(pod -> 
-                Math.abs(pod.hashCode() - targetHash)))
+            .min(Comparator.comparingInt(pod -> Math.abs(pod.hashCode() - targetHash)))
             .orElse(podId);
         
         return podId.equals(assignedPod);
     }
 
-    /**
-     * 최소 부하 방식: 현재 처리량이 가장 적은 Pod가 처리
-     */
     private boolean shouldProcessLeastLoaded(String movieId) {
         try {
-            // 현재 Pod의 작업 부하 확인
             int myLoad = getCurrentPodLoad();
-            
-            // 다른 Pod들의 부하와 비교
             List<String> activePods = getActivePods();
+            if (activePods.isEmpty() || !activePods.contains(podId)) {
+                return false;
+            }
             for (String otherPod : activePods) {
                 if (!otherPod.equals(podId)) {
                     int otherLoad = getPodLoad(otherPod);
                     if (otherLoad < myLoad) {
-                        return false; // 다른 Pod가 더 적게 부하 받고 있음
+                        return false;
                     }
                 }
             }
-            
             logger.debug("Least Loaded - 영화 {} 처리 (현재 부하: {})", movieId, myLoad);
             return true;
-            
         } catch (Exception e) {
             logger.error("최소 부하 계산 중 오류", e);
-            return shouldProcessRoundRobin(movieId); // Fallback
+            return shouldProcessRoundRobin(movieId);
         }
     }
 
     private List<String> getActivePods() {
         try {
             String key = "load_balancer:active_pods";
-            
-            // 5분 이상 오래된 Pod 정리
             long fiveMinutesAgo = System.currentTimeMillis() - (5 * 60 * 1000);
             redisTemplate.opsForZSet().removeRangeByScore(key, 0, fiveMinutesAgo);
             
             Set<String> pods = redisTemplate.opsForZSet().range(key, 0, -1);
-            List<String> result = pods != null ? new ArrayList<>(pods) : new ArrayList<>();
-            
-            // 현재 Pod이 목록에 없으면 추가
-            if (!result.contains(podId)) {
-                registerPod();
-                result.add(podId);
+            if (pods == null) {
+                return Collections.emptyList();
             }
-            
-            return result.stream().sorted().toList(); // 일관된 순서
-            
+            return pods.stream().sorted().collect(Collectors.toList());
         } catch (Exception e) {
             logger.error("활성 Pod 목록 조회 실패", e);
-            return List.of(podId); // Fallback: 자신만 반환
+            return List.of(podId);
         }
     }
 
@@ -186,33 +159,22 @@ public class LoadBalancingOptimizer {
             String loadStr = redisTemplate.opsForValue().get(loadKey);
             return loadStr != null ? Integer.parseInt(loadStr) : 0;
         } catch (Exception e) {
-            return Integer.MAX_VALUE; // 조회 실패 시 높은 부하로 가정
+            return Integer.MAX_VALUE;
         }
     }
 
-    /**
-     * 현재 Pod의 작업 부하 업데이트
-     */
     public void updatePodLoad(int currentLoad) {
         try {
             String loadKey = "load_balancer:pod_load:" + podId;
-            redisTemplate.opsForValue().set(loadKey, String.valueOf(currentLoad));
-            redisTemplate.expire(loadKey, java.time.Duration.ofMinutes(10));
-            
-            // 주기적으로 Pod 등록 갱신
+            redisTemplate.opsForValue().set(loadKey, String.valueOf(currentLoad), java.time.Duration.ofMinutes(10));
             registerPod();
-            
         } catch (Exception e) {
             logger.error("Pod 부하 업데이트 실패", e);
         }
     }
 
-    /**
-     * 부하 분산 상태 정보 반환
-     */
     public Map<String, Object> getLoadBalancingStatus() {
         Map<String, Object> status = new HashMap<>();
-        
         try {
             List<String> activePods = getActivePods();
             int myLoad = getCurrentPodLoad();
@@ -223,12 +185,10 @@ public class LoadBalancingOptimizer {
             status.put("currentLoad", myLoad);
             status.put("strategy", loadBalancingStrategy);
             status.put("enabled", enableLoadBalancing);
-            
         } catch (Exception e) {
             logger.error("부하 분산 상태 조회 실패", e);
             status.put("error", e.getMessage());
         }
-        
         return status;
     }
 }
